--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@
 						<span>M</span>
 						<span>e</span>
 					</a>
+					<br />
 				</div>
+				
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
-					<img class="img-fluid" src="img/banner-img.png" alt="">
+					<img style="height: 640px; margin-bottom: 100px; margin-right: 120px;" class="img-fluid" src="img/inno7.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -126,12 +128,7 @@
 					<div class="col single-brand">
 						<a href="#"><img class="mx-auto" src="img/brand/b3.png" alt=""></a>
 					</div>
-					<div class="col single-brand">
-						<a href="#"><img class="mx-auto" src="img/brand/b4.png" alt=""></a>
-					</div>
-					<div class="col single-brand">
-						<a href="#"><img class="mx-auto" src="img/brand/b5.png" alt=""></a>
-					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -144,7 +141,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
-					<img class="img-fluid" src="img/about-img.jpg" alt="">
+					<img style="height: 700px; width:auto; margin-left:150px;" class="img-fluid" src="img/inn_abt5.png" alt="">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
 					<div class="section-title">
@@ -554,11 +551,14 @@ set timeframes and to a high quality standard”
 
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<a href="#" class="primary-btn mt-50" data-text="Hire Me">
-						<span>H</span>
-						<span>i</span>
-						<span>r</span>
-						<span>e</span>
+					<a href="#" class="primary-btn mt-50" data-text="Contact Me">
+						<span>C</span>
+						<span>o</span>
+						<span>n</span>
+						<span>t</span>
+						<span>a</span>
+						<span>c</span>
+						<span>t</span>
 						<span> </span>
 						<span>M</span>
 						<span>e</span>
@@ -594,7 +594,7 @@ set timeframes and to a high quality standard”
 			<div class="row footer-bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed by <a href="#" target="_blank">Boakye I. Ababio</a> and made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
