--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 					<ul class="nav-menu white">
 						<li class=""><a href="index.html">Home</a></li>
 						<li><a class="active" href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="portfolio.html">Projects</a></li>
 						<li class="menu-has-children"><a href="#">Pages</a>
 							<ul class="dark">
 								<li><a href="elements.html">Elements</a></li>
@@ -68,12 +68,12 @@
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
-	<section class="banner-area relative">
+	<section class="banner-area relative" style="background-image: url('img/work/EC-Qz3qX4AIpm8c.jpeg'); background-attachment: fixed; background-size:cover; background-repeat: no-repeat ">
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-white">
-						About Us
+						About Me
 					</h1>
 					<p class="link-nav">
 						<span class="box">
@@ -91,20 +91,19 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
-					<img class="img-fluid" src="img/about-img.jpg" alt="">
+					<img style="height: 800px; width:auto; margin-left:130px; margin-top: -265px" class="img-fluid" src="img/inno771.png" alt="">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
 					<div class="section-title">
-						<h2>about myselt</h2>
+						<h2>About Me</h2>
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the
-							workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior
-							is often laughed. inappropriate behavior is often laughed off as “boys will be boys,” women face higher.
+							“A committed and driven MSc Computer Science Graduate with a sound understanding of of Artificial Intelligence, Machine
+Learning & Deep Learning and utilises sound organisation and planning skills to deliver research and Practical projects within
+set timeframes and to a high quality standard”
 						</p>
-						<p>That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often
-							laughed.
+						<p>I build cross platform mobile apps using react-native and Nodejs-backed or Python-Backend API's.
 						</p>
 					</div>
 					<a href="#" class="primary-btn white" data-text="More Info">
@@ -132,8 +131,9 @@
 	</section>
 	<!-- End About Area -->
 
+	
 	<!-- Start Job History Area Area -->
-	<section class="job-area offwhite section-gap-top section-gap-bottom-90">
+	<section class="job-area section-gap-top section-gap-bottom-90">
 		<div class="container">
 			<div class="row d-flex">
 				<div class="col-lg-12">
@@ -150,15 +150,12 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Senior Creative Design</h4>
-								<p>Old Bird IT, New Yorkt</p>
+								<h4>Research Assistant @HBUT</h4>
+								<p>Wuhan City, China</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Jul '15 to Present">
-									<span>J</span><span>u</span><span>l</span>
-									<span>'</span><span>1</span><span>5</span>
-									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+								<a href="#" class="primary-btn" data-text="Oct '15 2018 - ">
+									<span> </span><span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span><span> </span>
 								</a>
 							</div>
 						</div>
@@ -173,15 +170,14 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Senior Visualiser</h4>
-								<p>Old Bird IT, New Yorkt</p>
+								<h4>Teaching Assistant @UCC</h4>
+								<p>Cape Coast, Ghana</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Jul '15 to Present">
-									<span>J</span><span>u</span><span>l</span>
-									<span>'</span><span>1</span><span>5</span>
-									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+								<a href="#" class="primary-btn" data-text="Sep '01 2017 to...">
+									<span>A</span><span>u</span><span>g</span>
+									<span>'</span><span>0</span><span>1</span>
+									<span>2</span><span>0</span><span>1</span><span>8</span>
 								</a>
 							</div>
 						</div>
@@ -196,15 +192,14 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Junior Visualiser</h4>
-								<p>Old Bird IT, New Yorkt</p>
+								<h4>Software Developer</h4>
+								<p>Cape Coast, Ghana</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Jul '15 to Present">
-									<span>J</span><span>u</span><span>l</span>
+								<a href="#" class="primary-btn" data-text="Feb '02 2015 to...">
+									<span>S</span><span>e</span><span>p</span>
 									<span>'</span><span>1</span><span>5</span>
-									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+									<span>2</span><span>0</span><span>1</span><span>8</span>
 								</a>
 							</div>
 						</div>
@@ -219,14 +214,11 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Intern Designer</h4>
-								<p>Old Bird IT, New Yorkt</p>
+								<h4>Freelancer</h4>
+								<p>Upwork® Global Inc, Santa Clara, CA</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Jul '15 to Present">
-									<span>J</span><span>u</span><span>l</span>
-									<span>'</span><span>1</span><span>5</span>
-									<span>t</span><span>o</span>
+								<a href="#" class="primary-btn" data-text="Dec '15 2018 -">
 									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
 								</a>
 							</div>
