--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
-	<section class="banner-area relative">
+	<section class="banner-area relative" style="background-image: url('img/work/EDYfIVyUwAAVRnu.jpeg'); background-attachment: fixed; background-size:cover; background-repeat: no-repeat ">
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
@@ -116,24 +116,38 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w1.jpg" alt="">
+								<img class="image img-fluid" src="img/work/decagon-overview.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
+								<h4>Graph Convolutional Network</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
 					</div>
+					
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w2.jpg" alt="">
+								<img class="image img-fluid" src="img/work/Intel-Virtual-Reality.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>VR Immersion</h4>
+								<div class="cat">Project || 10/2019</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/socialnetwork.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>Knowledge Graph</h4>
+								<div class="cat">Research Project || 09/2019</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
@@ -142,10 +156,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w3.jpg" alt="">
+								<img class="image img-fluid" src="img/work/seaborn-python-data-visualization-libraries-fusioncharts.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
+								<h4>....</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
@@ -155,7 +169,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
+								<img class="image img-fluid" src="img/work/IoT-2.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
@@ -168,7 +182,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4.jpg" alt="">
+								<img class="image img-fluid" src="img/work/koeln00.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
@@ -181,7 +195,46 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5.jpg" alt="">
+								<img class="image img-fluid" src="img/work/astray.png" alt="">
+							</div>
+							<div class="middle">
+								<h4>2D Vinyl Design</h4>
+								<div class="cat">Clobal Code Project || 07/2017</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/virtual-surfing.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>2D Vinyl Design</h4>
+								<div class="cat">Client Project</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/iot_internet_of_things_lifestyle_connected_appliances_by_elenabs_gettyimages-1018211724_2400x1600-100788445-large.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>2D Vinyl Design</h4>
+								<div class="cat">Client Project</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/DDfUFvt3iEwiQmECo9j2Wi.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
