--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
-	<section class="banner-area relative">
+	<section class="banner-area relative" style="background-image: url('img/work/D1cVGnGXQAAJgfP.jpeg'); background-attachment: fixed; background-size:cover; background-repeat: no-repeat">
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
@@ -163,7 +163,9 @@
 				</div>
 
 				<div class="col-lg-12">
-					<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
+					<div class="map-wrap" style="width:100%; height: 445px;">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d472321.73303582537!2d113.84750098420142!3d22.353117620143042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sHong%20Kong%20city!5e0!3m2!1sen!2sus!4v1568108325979!5m2!1sen!2sus" width="100%" height="455" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+					</div>
 				</div>
 			</div>
 		</div>
