--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Boakye I. Ababio</h1>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
 						Ai, ML, DL ||
-						<span class="designer">Backend</span>
-						& Mobile 
-						<span class="developer">Developer</span>
+						<span class="designer">Backend, Frontend Mobile & Web Dev</span>
+						 
+						<span class="developer">CEO @Epta.com</span>
 					</div>
 					<a href="#" class="primary-btn" data-text="Contact Me">
 						<span>C</span>
@@ -141,7 +141,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
-					<img style="height: 700px; width:auto; margin-left:150px;" class="img-fluid" src="img/inn_abt5.png" alt="">
+					<img style="height: 800px; width:auto; margin-left:100px;" class="img-fluid" src="img/inno771.png" alt="">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
 					<div class="section-title">
@@ -156,7 +156,7 @@ set timeframes and to a high quality standard”
 						<p>I build cross platform mobile apps using react-native and Nodejs-backed or Python-Backend API's.
 						</p>
 					</div>
-					<a href="#" class="primary-btn white" data-text="More Info">
+					<a href="about.html" class="primary-btn white" data-text="More Info">
 						<span>M</span>
 						<span>o</span>
 						<span>r</span>
@@ -212,24 +212,38 @@ set timeframes and to a high quality standard”
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w1.jpg" alt="">
+								<img class="image img-fluid" src="img/work/decagon-overview.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
+								<h4>Graph Convolutional Network</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
 					</div>
+					
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w2.jpg" alt="">
+								<img class="image img-fluid" src="img/work/Intel-Virtual-Reality.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>VR Immersion</h4>
+								<div class="cat">Project || 10/2019</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/socialnetwork.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>Knowledge Graph</h4>
+								<div class="cat">Research Project || 09/2019</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
@@ -238,10 +252,10 @@ set timeframes and to a high quality standard”
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w3.jpg" alt="">
+								<img class="image img-fluid" src="img/work/seaborn-python-data-visualization-libraries-fusioncharts.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
+								<h4>....</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
@@ -251,7 +265,7 @@ set timeframes and to a high quality standard”
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
+								<img class="image img-fluid" src="img/work/IoT-2.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
@@ -264,7 +278,7 @@ set timeframes and to a high quality standard”
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4.jpg" alt="">
+								<img class="image img-fluid" src="img/work/koeln00.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
@@ -277,7 +291,46 @@ set timeframes and to a high quality standard”
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5.jpg" alt="">
+								<img class="image img-fluid" src="img/work/astray.png" alt="">
+							</div>
+							<div class="middle">
+								<h4>2D Vinyl Design</h4>
+								<div class="cat">Clobal Code Project || 07/2017</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/virtual-surfing.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>2D Vinyl Design</h4>
+								<div class="cat">Client Project</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/iot_internet_of_things_lifestyle_connected_appliances_by_elenabs_gettyimages-1018211724_2400x1600-100788445-large.jpg" alt="">
+							</div>
+							<div class="middle">
+								<h4>2D Vinyl Design</h4>
+								<div class="cat">Client Project</div>
+							</div>
+							<a class="overlay" href="portfolio-details.html"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="img/work/DDfUFvt3iEwiQmECo9j2Wi.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
