--- a/blog-single.html
+++ b/blog-single.html
@@ -43,23 +43,12 @@
 				</div>
 				<nav id="nav-menu-container" class="ml-auto">
 					<ul class="nav-menu white">
-						<li><a href="index.html">Home</a></li>
+						<li class=""><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li class="menu-has-children"><a href="#">Pages</a>
-							<ul class="dark">
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<li><a href="services.html">Service</a></li>
-								<li><a href="portfolio-details.html">Portfolio Details</a></li>
-							</ul>
-						</li>
-						<li class="menu-has-children"><a class="active" href="">Blog</a>
-							<ul class="dark">
-								<li><a href="blog-home.html">Blog Home</a></li>
-								<li><a class="active" href="blog-single.html">Blog Single</a></li>
-							</ul>
-						</li>
+						<li><a  href="portfolio.html">Projects</a></li>
+						<li><a href="portfolio.html">Research</a></li>
+						<li><a class="active" href="portfolio.html">Blog</a></li>
+						
 					</ul>
 				</nav>
 			</div>
