--- a/index.html
+++ b/index.html
@@ -54,21 +54,9 @@
 					<ul class="nav-menu">
 						<li class=""><a class="active" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li class="menu-has-children"><a href="#">Pages</a>
-							<ul>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<li><a href="services.html">Service</a></li>
-								<li><a href="portfolio-details.html">Portfolio Details</a></li>
-							</ul>
-						</li>
-						<li class="menu-has-children"><a href="">Blog</a>
-							<ul>
-								<li><a href="blog-home.html">Blog Home</a></li>
-								<li><a href="blog-single.html">Blog Single</a></li>
-							</ul>
-						</li>
+						<li><a href="portfolio.html">Projects</a></li>
+						<li><a href="portfolio.html">Research</a></li>
+						<li><a href="portfolio.html">Blog</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -86,9 +74,9 @@
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Boakye I. Ababio</h1>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
 						Ai, ML, DL ||
-						<span class="designer">Backend, Frontend Mobile & Web Dev</span>
+						<span class="designer">Backend, Frontend Mobile & Web</span>
 						 
-						<span class="developer">CEO @Epta.com</span>
+						<span class="developer">Developer</span>
 					</div>
 					<a href="#" class="primary-btn" data-text="Contact Me">
 						<span>C</span>
@@ -106,7 +94,7 @@
 				</div>
 				
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
-					<img style="height: 640px; margin-bottom: 100px; margin-right: 120px;" class="img-fluid" src="img/inno7.png" alt="">
+					<img style="height: 640px; margin-bottom: 100px; margin-right: 120px;" class="img-fluid" src="img/inno7-new.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -141,7 +129,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
-					<img style="height: 800px; width:auto; margin-left:100px;" class="img-fluid" src="img/inno771.png" alt="">
+					<img style="height: 800px; width:auto; margin-left:100px;" class="img-fluid" src="img/inno771-new.png" alt="">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
 					<div class="section-title">
@@ -184,7 +172,10 @@ set timeframes and to a high quality standard”
 
 	<!-- Start Work Area Area -->
 	<section class="work-area section-gap-top section-gap-bottom-90" id="work">
-		<div class="container">
+	
+	<div class="container">
+		<div class="col-lg-12">
+		<div class="col-md-10">
 			<div class="row d-flex justify-content-between align-items-end mb-80">
 				<div class="col-lg-6">
 					<div class="section-title">
@@ -341,23 +332,28 @@ set timeframes and to a high quality standard”
 					</div>
 				</div>
 			</div>
+			<iframe height="500" width="200"><div class="col-md-2" style="height: 200px;"><a class="twitter-timeline" href="https://twitter.com/IbaMelch?ref_src=twsrc%5Etfw">Tweets by IbaMelch</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div></iframe>
 		</div>
+		</div>
+		
+	  </div>
 	</section>
 	<!-- End Work Area Area -->
 
+	
 
 	<!-- Start Job History Area Area -->
 	<section class="job-area section-gap-top section-gap-bottom-90">
 		<div class="container">
-			<div class="row d-flex">
-				<div class="col-lg-12">
-					<div class="section-title">
-						<h2>Job History</h2>
-						<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>
+				<div class="row d-flex">
+					<div class="col-lg-12">
+						<div class="section-title">
+							<h2>Job History</h2>
+							<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+								some for as low as $.17 each.</p>
+						</div>
 					</div>
 				</div>
-			</div>
 
 			<div class="row">
 				<div class="col-lg-6">
@@ -447,7 +443,6 @@ set timeframes and to a high quality standard”
 		</div>
 	</section>
 	<!-- End Job Historyt Area Area -->
-
 
 	<!-- Start Service Area -->
 	<section class="service-area section-gap">
@@ -637,7 +632,7 @@ set timeframes and to a high quality standard”
 						</div>
 						<div class="footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="https://twitter.com/IbaMelch?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @IbaMelch</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 							<a href="#"><i class="fa fa-dribbble"></i></a>
 							<a href="#"><i class="fa fa-behance"></i></a>
 						</div>
