--- a/portfolio.html
+++ b/portfolio.html
@@ -45,21 +45,10 @@
 					<ul class="nav-menu white">
 						<li class=""><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a class="active" href="portfolio.html">Portfolio</a></li>
-						<li class="menu-has-children"><a href="#">Pages</a>
-							<ul class="dark">
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<li><a href="services.html">Service</a></li>
-								<li><a href="portfolio-details.html">Portfolio Details</a></li>
-							</ul>
-						</li>
-						<li class="menu-has-children"><a href="">Blog</a>
-							<ul class="dark">
-								<li><a href="blog-home.html">Blog Home</a></li>
-								<li><a href="blog-single.html">Blog Single</a></li>
-							</ul>
-						</li>
+						<li><a class="active" href="portfolio.html">Projects</a></li>
+						<li><a href="portfolio.html">Research</a></li>
+						<li><a href="portfolio.html">Blog</a></li>
+						
 					</ul>
 				</nav>
 			</div>
