--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/icon.png">
 	<!-- Author Meta -->
 	<meta name="author" content="colorlib">
 	<!-- Meta Description -->
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Kenedy Personal</title>
+	<title>IBA</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,900" rel="stylesheet">
@@ -48,7 +48,7 @@
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+					<a href="index.html"><img src="img/icon.png" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -175,7 +175,6 @@ set timeframes and to a high quality standard”
 	
 	<div class="container">
 		<div class="col-lg-12">
-		<div class="col-md-10">
 			<div class="row d-flex justify-content-between align-items-end mb-80">
 				<div class="col-lg-6">
 					<div class="section-title">
@@ -209,7 +208,7 @@ set timeframes and to a high quality standard”
 								<h4>Graph Convolutional Network</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					
@@ -223,7 +222,7 @@ set timeframes and to a high quality standard”
 								<h4>VR Immersion</h4>
 								<div class="cat">Project || 10/2019</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -236,7 +235,7 @@ set timeframes and to a high quality standard”
 								<h4>Knowledge Graph</h4>
 								<div class="cat">Research Project || 09/2019</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.4s">
@@ -249,7 +248,7 @@ set timeframes and to a high quality standard”
 								<h4>....</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
@@ -262,7 +261,7 @@ set timeframes and to a high quality standard”
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
@@ -275,7 +274,7 @@ set timeframes and to a high quality standard”
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -288,7 +287,7 @@ set timeframes and to a high quality standard”
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Clobal Code Project || 07/2017</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -301,7 +300,7 @@ set timeframes and to a high quality standard”
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -314,7 +313,7 @@ set timeframes and to a high quality standard”
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -327,13 +326,12 @@ set timeframes and to a high quality standard”
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<iframe height="500" width="200"><div class="col-md-2" style="height: 200px;"><a class="twitter-timeline" href="https://twitter.com/IbaMelch?ref_src=twsrc%5Etfw">Tweets by IbaMelch</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div></iframe>
-		</div>
+			
 		</div>
 		
 	  </div>
@@ -626,7 +624,7 @@ set timeframes and to a high quality standard”
 					<div class="footer-top flex-column">
 						<div class="footer-logo">
 							<a href="#">
-								<img src="img/logo.png" alt="">
+								<img src="img/icon.png" alt="">
 							</a>
 							<h4>Follow Me</h4>
 						</div>
