--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 						<li><a class="active" href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="research.html">Research</a></li>
-						<li><a href="blog-home.html">Blog</a></li>
+						<li><a href="#">Blog</a></li>
 					</ul>
 				</nav>
 			</div>
