--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="projects.html">Projects</a></li>
 						<li><a href="research.html">Research</a></li>
-						<li><a href="blog-home.html">Blog</a></li>
+						<li><a href="#">Blog</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -255,7 +255,7 @@ set timeframes and to a high quality standard”
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/IoT-2.jpg" alt="">
+								<img class="image img-fluid" src="img/work/devastator-tank-mobile-robot-platform-6369872915.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
