--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a class="active" href="projects.html">Projects</a></li>
 						<li><a href="research.html">Research</a></li>
-						<li><a href="blog.html">Blog</a></li>
+						<li><a href="#">Blog</a></li>
 						
 					</ul>
 				</nav>
@@ -57,7 +57,7 @@
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
-	<section class="banner-area relative" style="background-image: url('img/work/EDYfIVyUwAAVRnu.jpeg'); background-attachment: fixed; background-size:cover; background-repeat: no-repeat ">
+	<section class="banner-area relative" style="background-image: url('img/NEC-SmartCity_CityScape.jpg'); background-attachment: fixed; background-size: normal ; background-repeat: no-repeat ">
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
@@ -67,7 +67,7 @@
 					<p class="link-nav">
 						<span class="box">
 							<a href="index.html">Home </a>
-							<a href="portfolio.html">Projects</a></p>
+							<a href="projects.html">Projects</a></p>
 					</span>
 				</div>
 			</div>
@@ -158,7 +158,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/IoT-2.jpg" alt="">
+								<img class="image img-fluid" src="img/work/devastator-tank-mobile-robot-platform-6369872915.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
