--- a/research.html
+++ b/research.html
@@ -47,7 +47,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a  href="projects.html">Projects</a></li>
 						<li><a class="active" href="research.html">Research</a></li>
-						<li><a href="portfolio.html">Blog</a></li>
+						<li><a href="#">Blog</a></li>
 						
 					</ul>
 				</nav>
