--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ set timeframes and to a high quality standard”
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Latest Works</h2>
-						<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>
+						<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+							some for as low as $.17 each.</p> -->
 					</div>
 				</div>
 
@@ -188,9 +188,9 @@ set timeframes and to a high quality standard”
 					<div class="filters">
 						<ul>
 							<li class="active" data-filter=".all">All Categories</li>
-							<li data-filter=".branding">Branding</li>
-							<li data-filter=".creative">Creative Work</li>
-							<li data-filter=".web-design">Web Design</li>
+							<li data-filter=".branding">Ai</li>
+							<li data-filter=".creative">IoT</li>
+							<li data-filter=".web-design">App Dev</li>
 						</ul>
 					</div>
 				</div>
@@ -347,8 +347,8 @@ set timeframes and to a high quality standard”
 					<div class="col-lg-12">
 						<div class="section-title">
 							<h2>Job History</h2>
-							<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-								some for as low as $.17 each.</p>
+							<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+								some for as low as $.17 each.</p> -->
 						</div>
 					</div>
 				</div>
@@ -367,10 +367,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 
@@ -389,10 +389,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.2s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.2s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 
@@ -411,10 +411,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.4s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.4s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 
@@ -431,10 +431,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -449,8 +449,8 @@ set timeframes and to a high quality standard”
 				<div class="col-lg-12">
 					<div class="section-title">
 						<h2>Service Offers</h2>
-						<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>
+						<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+							some for as low as $.17 each.</p> -->
 					</div>
 				</div>
 			</div>
@@ -498,7 +498,7 @@ set timeframes and to a high quality standard”
 
 
 	<!-- Start Testimonials Area -->
-	<section class="testimonials_area section-gap">
+	<!-- <section class="testimonials_area section-gap">
 		<div class="container">
 			<div class="testi_slider owl-carousel">
 				<div class="item">
@@ -560,7 +560,7 @@ set timeframes and to a high quality standard”
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- End Testimonials Area -->
 
 
@@ -571,8 +571,8 @@ set timeframes and to a high quality standard”
 				<div class="col-lg-12">
 					<div class="contact-title">
 						<h2>Contact Me</h2>
-						<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>
+						<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+							some for as low as $.17 each.</p> -->
 					</div>
 				</div>
 			</div>
