--- a/contact.html
+++ b/contact.html
@@ -75,149 +75,115 @@
 		</div>
 	</section>
 	<!-- End banner Area -->
-
-	<!-- Start contact-page Area -->
-	<section class="contact-page-area section-gap-top">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 d-flex flex-column address-wrap">
-					<div class="single-contact-address d-flex flex-row">
-						<div class="icon">
-							<span class="lnr lnr-home"></span>
-						</div>
-						<div class="contact-details">
-							<h5>Binghamton, New York</h5>
-							<p>
-								4343 Hinkle Deegan Lake Road
-							</p>
-						</div>
-					</div>
-					<div class="single-contact-address d-flex flex-row">
-						<div class="icon">
-							<span class="lnr lnr-phone-handset"></span>
-						</div>
-						<div class="contact-details">
-							<h5>00 (958) 9865 562</h5>
-							<p>Mon to Fri 9am to 6 pm</p>
-						</div>
-					</div>
-					<div class="single-contact-address d-flex flex-row">
-						<div class="icon">
-							<span class="lnr lnr-envelope"></span>
-						</div>
-						<div class="contact-details">
-							<h5>support@colorlib.com</h5>
-							<p>Send us your query anytime!</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-8">
-					<form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
-						<div class="row">
-							<div class="col-lg-6 form-group form-group-top">
-								<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'"
-								 class="common-input mb-20 form-control" required="" type="text">
-
-								<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''"
-								 onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email">
-
-								<input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'"
-								 class="common-input mb-20 form-control" required="" type="text">
-							</div>
-							<div class="col-lg-6 form-group">
-								<textarea class="common-textarea form-control" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'"
-								 required=""></textarea>
-							</div>
-							<div class="col-lg-12">
-								<div class="alert-msg" style="text-align: left;"></div>
-
-								<button class="primary-btn" style="float: right;" data-text="Send Message">
-									<span>S</span>
-									<span>e</span>
-									<span>n</span>
-									<span>d</span>
-									<span> </span>
-									<span>M</span>
-									<span>e</span>
-									<span>s</span>
-									<span>s</span>
-									<span>a</span>
-									<span>g</span>
-									<span>e</span>
-
-								</button>
-							</div>
-						</div>
-					</form>
-				</div>
-
-				<div class="col-lg-12">
-					<div class="map-wrap" style="width:100%; height: 445px;">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d472321.73303582537!2d113.84750098420142!3d22.353117620143042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sHong%20Kong%20city!5e0!3m2!1sen!2sus!4v1568108325979!5m2!1sen!2sus" width="100%" height="455" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-					</div>
+<!-- Start Contact Area -->
+<section class="contact-area section-gap">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="contact-title">
+					<h2>Contact Me</h2>
+					<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+						some for as low as $.17 each.</p> -->
 				</div>
 			</div>
 		</div>
-	</section>
-	<!-- End contact-page Area -->
 
-	<!-- start footer Area -->
-	<footer class="footer-area">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-12">
-					<div class="footer-top flex-column">
-						<div class="footer-logo">
-							<a href="#">
-								<img src="img/icon.png" alt="">
-							</a>
-							<h4>Follow Me</h4>
-						</div>
-						<div class="footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
-					</div>
+		<div class="row mt-80">
+			<div class="col-lg-4 col-md-4">
+				<div class="contact-box">
+					<h4>+86 132 6060 8760</h4>
 				</div>
 			</div>
-			<div class="row footer-bottom justify-content-center">
-				<p class="col-lg-8 col-sm-12 footer-text">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+			<div class="col-lg-4 col-md-4">
+				<div class="contact-box">
+					<h4>innocent.ababio@stu.ucc.edu.gh/<br/>iba-7@outlook.com</h4>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4">
+				<div class="contact-box">
+					<h4>github.com/melch-inno/web</h4>
+				</div>
 			</div>
 		</div>
-	</footer>
-	<!-- End footer Area -->
 
-	<!-- ####################### Start Scroll to Top Area ####################### -->
-	<div id="back-top">
-		<a title="Go to Top" href="#">
-			<i class="lnr lnr-arrow-up"></i>
-		</a>
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<a href="#" class="primary-btn mt-50" data-text="Contact Me">
+					<span>C</span>
+					<span>o</span>
+					<span>n</span>
+					<span>t</span>
+					<span>a</span>
+					<span>c</span>
+					<span>t</span>
+					<span> </span>
+					<span>M</span>
+					<span>e</span>
+				</a>
+			</div>
+		</div>
 	</div>
-	<!-- ####################### End Scroll to Top Area ####################### -->
+</section>
+<!-- End Contact Area -->
 
-	<script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	 crossorigin="anonymous"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-	<script src="js/easing.min.js"></script>
-	<script src="js/hoverIntent.js"></script>
-	<script src="js/superfish.min.js"></script>
-	<script src="js/mn-accordion.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/isotope.pkgd.min.js"></script>
-	<script src="js/jquery.circlechart.js"></script>
-	<script src="js/mail-script.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script src="js/main.js"></script>
+
+<!-- start footer Area -->
+<footer class="footer-area">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-lg-12">
+				<div class="footer-top flex-column">
+					<div class="footer-logo">
+						<a href="#">
+							<img src="img/icon.png" alt="">
+						</a>
+						<h4>Follow Me</h4>
+					</div>
+					<div class="footer-social">
+						<a href="#"><i class="fa fa-facebook"></i></a>
+						<a href="https://twitter.com/IbaMelch?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @IbaMelch</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+						<a href="#"><i class="fa fa-dribbble"></i></a>
+						<a href="#"><i class="fa fa-behance"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row footer-bottom justify-content-center">
+			<p class="col-lg-8 col-sm-12 footer-text">
+				<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed by <a href="#" target="_blank">Boakye I. Ababio</a> and made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+		</div>
+	</div>
+</footer>
+<!-- End footer Area -->
+
+<!-- ####################### Start Scroll to Top Area ####################### -->
+<div id="back-top">
+	<a title="Go to Top" href="#">
+		<i class="lnr lnr-arrow-up"></i>
+	</a>
+</div>
+<!-- ####################### End Scroll to Top Area ####################### -->
+
+<script src="js/vendor/jquery-2.2.4.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+ crossorigin="anonymous"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+<script src="js/easing.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.min.js"></script>
+<script src="js/mn-accordion.js"></script>
+<script src="js/jquery.ajaxchimp.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.nice-select.min.js"></script>
+<script src="js/isotope.pkgd.min.js"></script>
+<script src="js/jquery.circlechart.js"></script>
+<script src="js/mail-script.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
