--- a/research.html
+++ b/research.html
@@ -286,6 +286,58 @@
 	</section>
 	<!-- End Contact Area -->
 
+	<!-- Start Contact Area -->
+	<section class="contact-area section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="contact-title">
+						<h2>Contact Me</h2>
+						<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+							some for as low as $.17 each.</p> -->
+					</div>
+				</div>
+			</div>
+
+			<div class="row mt-80">
+				<div class="col-lg-4 col-md-4">
+					<div class="contact-box">
+						<h4>+86 132 6060 8760</h4>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4">
+					<div class="contact-box">
+						<h4>innocent.ababio@stu.ucc.edu.gh/<br/>iba-7@outlook.com</h4>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-4">
+					<div class="contact-box">
+						<h4>github.com/melch-inno/web</h4>
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<a href="#" class="primary-btn mt-50" data-text="Contact Me">
+						<span>C</span>
+						<span>o</span>
+						<span>n</span>
+						<span>t</span>
+						<span>a</span>
+						<span>c</span>
+						<span>t</span>
+						<span> </span>
+						<span>M</span>
+						<span>e</span>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Contact Area -->
+
+
 	<!-- start footer Area -->
 	<footer class="footer-area">
 		<div class="container">
@@ -300,7 +352,7 @@
 						</div>
 						<div class="footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="https://twitter.com/IbaMelch?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @IbaMelch</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 							<a href="#"><i class="fa fa-dribbble"></i></a>
 							<a href="#"><i class="fa fa-behance"></i></a>
 						</div>
@@ -310,7 +362,7 @@
 			<div class="row footer-bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Designed by <a href="#" target="_blank">Boakye I. Ababio</a> and made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
