upload new Changes

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ set timeframes and to a high quality standard”
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<div class="contact-box">
-						<h4>github.com/melch-inno/web</h4>
+						<h4>melch-inno.github.io/web/</h4>
 					</div>
 				</div>
 			</div>
