--- a/about.html
+++ b/about.html
@@ -134,15 +134,15 @@ set timeframes and to a high quality standard”
 	<!-- Start Job History Area Area -->
 	<section class="job-area section-gap-top section-gap-bottom-90">
 		<div class="container">
-			<div class="row d-flex">
-				<div class="col-lg-12">
-					<div class="section-title">
-						<h2>Job History</h2>
-						<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>
+				<div class="row d-flex">
+					<div class="col-lg-12">
+						<div class="section-title">
+							<h2>Job History</h2>
+							<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
+								some for as low as $.17 each.</p> -->
+						</div>
 					</div>
 				</div>
-			</div>
 
 			<div class="row">
 				<div class="col-lg-6">
@@ -158,10 +158,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 
@@ -180,10 +180,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.2s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.2s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 
@@ -202,10 +202,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.4s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.4s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 
@@ -222,10 +222,10 @@ set timeframes and to a high quality standard”
 								</a>
 							</div>
 						</div>
-						<div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
+						<!-- <div class="bottom-sec wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
 							All users on MySpace will know that there are millions of people out there. Every day besides. All users on My will know
 							that there are millions of people out of the field there.
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -325,7 +325,7 @@ set timeframes and to a high quality standard”
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<div class="contact-box">
-						<h4>github.com/melch-inno/web</h4>
+						<h4>melch-inno.github.io/web/</h4>
 					</div>
 				</div>
 			</div>
