--- a/blog-single.html
+++ b/blog-single.html
@@ -507,7 +507,7 @@
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<div class="contact-box">
-						<h4>github.com/melch-inno/web</h4>
+						<h4>melch-inno.github.io/web/</h4>
 					</div>
 				</div>
 			</div>
