--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ set timeframes and to a high quality standard”
 								<img class="image img-fluid" src="img/work/seaborn-python-data-visualization-libraries-fusioncharts.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>....</h4>
+								<h4>Regresion Analysis</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="#"></a>
@@ -258,8 +258,8 @@ set timeframes and to a high quality standard”
 								<img class="image img-fluid" src="img/work/devastator-tank-mobile-robot-platform-6369872915.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>IoT & Autonomous Systems</h4>
+								<div class="cat">Global Code Project</div>
 							</div>
 							<a class="overlay" href="#"></a>
 						</div>
@@ -271,8 +271,8 @@ set timeframes and to a high quality standard”
 								<img class="image img-fluid" src="img/work/koeln00.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>Generative Adversary Network</h4>
+								<div class="cat">Research Project || 08/2019</div>
 							</div>
 							<a class="overlay" href="#"></a>
 						</div>
@@ -284,7 +284,7 @@ set timeframes and to a high quality standard”
 								<img class="image img-fluid" src="img/work/astray.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
+								<h4>PyMaize</h4>
 								<div class="cat">Clobal Code Project || 07/2017</div>
 							</div>
 							<a class="overlay" href="#"></a>
@@ -297,8 +297,8 @@ set timeframes and to a high quality standard”
 								<img class="image img-fluid" src="img/work/virtual-surfing.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>VR Mobile 360</h4>
+								<div class="cat">Udacity || 2019</div>
 							</div>
 							<a class="overlay" href="#"></a>
 						</div>
@@ -310,7 +310,7 @@ set timeframes and to a high quality standard”
 								<img class="image img-fluid" src="img/work/iot_internet_of_things_lifestyle_connected_appliances_by_elenabs_gettyimages-1018211724_2400x1600-100788445-large.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
+								<h4>E-Commerce with Node & React</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="#"></a>
@@ -323,8 +323,8 @@ set timeframes and to a high quality standard”
 								<img class="image img-fluid" src="img/work/DDfUFvt3iEwiQmECo9j2Wi.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>VR Immersion </h4>
+								<div class="cat"> Udacity || 2019</div>
 							</div>
 							<a class="overlay" href="#"></a>
 						</div>
