--- a/research.html
+++ b/research.html
@@ -91,10 +91,10 @@
 			</div>
 
 			<div class="filters-content">
-				<p>Thesis: Knowledge graph based on multi-head attention transformer and Graph neural Network</p>
-				<p>1. Probabilistic Heurists in link prediction based on GAN</p>
-				<p>2. Multi-head Attention mechanism in knowledge graph</p>
-				<p>3. Multi-agent systems</p>
+				<p style="font-size: 18px">Thesis: Knowledge graph based on multi-head attention transformer and Graph neural Network</p>
+				<p style="font-size: 18px">1. Probabilistic Heurists in link prediction based on GAM</p>
+				<p style="font-size: 18px">2. Multi-head Attention mechanism in knowledge graph</p>
+				<p style="font-size: 18px">3. Multi-agent systems</p>
 			</div>
 <br /><br /><br /><br />
 			<div class="row d-flex justify-content-between align-items-end mb-80">
@@ -103,7 +103,7 @@
 						<h2>Online Study Projects</h2>
 						<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
 							some for as low as $.17 each.</p> -->
-							<p>VR Immersion & VR Mobile 360 || Udersity</p>
+							<p style="font-size: 18px">VR Immersion & VR Mobile 360 || Udersity</p>
 					</div>
 				</div>
 
