new Upload change

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						 
 						<span class="developer">Developer</span>
 					</div>
-					<a href="#" class="primary-btn" data-text="Contact Me">
+					<a href="contact.html" class="primary-btn" data-text="Contact Me">
 						<span>C</span>
 						<span>o</span>
 						<span>n</span>
@@ -206,7 +206,7 @@ set timeframes and to a high quality standard”
 							</div>
 							<div class="middle">
 								<h4>Graph Convolutional Network</h4>
-								<div class="cat">Client Project</div>
+								<div class="cat">Research Project || 2018</div>
 							</div>
 							<a class="overlay" href="#"></a>
 						</div>
@@ -246,7 +246,7 @@ set timeframes and to a high quality standard”
 							</div>
 							<div class="middle">
 								<h4>Regresion Analysis</h4>
-								<div class="cat">Client Project</div>
+								<div class="cat">Research Project || 2018</div>
 							</div>
 							<a class="overlay" href="#"></a>
 						</div>
@@ -488,7 +488,7 @@ set timeframes and to a high quality standard”
 						<span class="lnr lnr-diamond"></span>						
 						<h4><span>Research</span> Consultant
 						</h4>
-						<p> Research focus on Natural language Processing: GNN, RNN and Image processing: CNN and GAN</p>
+						<p> Research focus on Natural language Processing and Image Processing: GNN, RNN and Image processing: CNN and GAN</p>
 					</div>
 				</div>
 			</div>
@@ -597,7 +597,7 @@ set timeframes and to a high quality standard”
 
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<a href="#" class="primary-btn mt-50" data-text="Contact Me">
+					<a href="contact.html" class="primary-btn mt-50" data-text="Contact Me">
 						<span>C</span>
 						<span>o</span>
 						<span>n</span>
