--- a/projects.html
+++ b/projects.html
@@ -276,7 +276,7 @@
 
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<a href="#" class="primary-btn mt-50" data-text="Contact Me">
+					<a href="contact.html" class="primary-btn mt-50" data-text="Contact Me">
 						<span>C</span>
 						<span>o</span>
 						<span>n</span>
