--- a/research.html
+++ b/research.html
@@ -92,7 +92,7 @@
 
 			<div class="filters-content">
 				<p style="font-size: 18px">Thesis: Knowledge graph based on multi-head attention transformer and Graph neural Network</p>
-				<p style="font-size: 18px">1. Probabilistic Heurists in link prediction based on GAM</p>
+				<p style="font-size: 18px">1. Probabilistic Heurists in link prediction based on Graph Attention Mechanism</p>
 				<p style="font-size: 18px">2. Multi-head Attention mechanism in knowledge graph</p>
 				<p style="font-size: 18px">3. Multi-agent systems</p>
 			</div>
@@ -146,7 +146,7 @@
 
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<a href="#" class="primary-btn mt-50" data-text="Contact Me">
+					<a href="contact.html" class="primary-btn mt-50" data-text="Contact Me">
 						<span>C</span>
 						<span>o</span>
 						<span>n</span>
