--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ set timeframes and to a high quality standard”
 						<span class="lnr lnr-diamond"></span>						
 						<h4><span>Research</span> Consultant
 						</h4>
-						<p> Research focus on Natural language Processing and Image Processing: GNN, RNN and Image processing: CNN and GAN</p>
+						<p> Research focus on Natural language Processing and Computer Vision: GNN, RNN and Image processing: CNN and GAN</p>
 					</div>
 				</div>
 			</div>
