NEW blog update

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<li class="menu-has-children"><a href="#">Blog</a>
 							<ul>
 								<li><a href="#">Blog List</a></li>
-								<li><a href="https://medium.com/@melchhepta">Medium Articles</a></li>
+								<li><a href="https://medium.com/@melchhepta">Medium</a></li>
 							</ul>
 						</li>
 					</ul>
