--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,13 @@
 						<li><a href="about.html">About</a></li>
 						<li><a class="active" href="portfolio.html">Projects</a></li>
 						<li><a href="portfolio.html">Research</a></li>
-						<li><a href="portfolio.html">Blog</a></li>
+						
+						<li class="menu-has-children"><a href="#">Blog</a>
+							<ul class="dark">
+								<li><a href="#">Blog List</a></li>
+								<li><a href="https://medium.com/@melchhepta">Medium Articles</a></li>
+							</ul>
+						</li>
 						
 					</ul>
 				</nav>
