--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,9 @@
 						<li><a href="about.html">About</a></li>
 						<li><a class="active" href="projects.html">Projects</a></li>
 						<li><a href="research.html">Research</a></li>
-						<li class="menu-has-children"><a class="active" href="#">Blog</a>
-							<ul>
+						
+						<li class="menu-has-children"><a href="#">Blog</a>
+							<ul class="dark">
 								<li><a href="#">Blog List</a></li>
 								<li><a href="https://medium.com/@melchhepta">Medium Articles</a></li>
 							</ul>
