--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 						
 						<li class="menu-has-children"><a href="#">Blog</a>
 							<ul class="dark">
-								<li><a href="#">Blog List</a></li>
+								<li><a href="blog-home.html">Blog List</a></li>
 								<li><a href="https://medium.com/@melchhepta">Medium</a></li>
 							</ul>
 						</li>
@@ -128,13 +128,16 @@ set timeframes and to a high quality standard”
 	
 	Dedicated sites are my points of reference for others to explore<br /><br />
 
-	Github: <a href="https://github.com/melch-inno">https://github.com/melch-inno</a><br />
+	Github: <a href="https://github.com/melch-inno">Github Page</a><br />
 
-	LinkedIn: <a href="https://www.linkedin.com/in/boakye-i-ababio-4b2a5110b/">https://www.linkedin.com/in/boakye-i-ababio-4b2a5110b/</a><br />
+	LinkedIn: <a href="https://www.linkedin.com/in/boakye-i-ababio-4b2a5110b/">Connect with me on LinkedIn </a><br />
 
-	Twitter : <a href="https://twitter.com/IbaMelch">https://twitter.com/IbaMelch</a><br />
+	Twitter : <a href="https://twitter.com/IbaMelch">Twitter Page</a><br />
+
+	Medium Blog  : <a href="https://medium.com/@melchhepta">Follow my Articles @Medium</a><br />
 	
-	Kaggle  : <a href="https://www.kaggle.com/melchhepta">https://www.kaggle.com/melchhepta</a><br />
+	Kaggle  : <a href="https://www.kaggle.com/melchhepta">Kaggle, Data Science Community</a><br />
+
 	</p>
 	
 	<!-- Start Job History Area Area -->
@@ -143,7 +146,7 @@ set timeframes and to a high quality standard”
 				<div class="row d-flex">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>Job History</h2>
+							<h2>Experience</h2>
 							<!-- <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
 								some for as low as $.17 each.</p> -->
 						</div>
