--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<li><a href="research.html">Research</a></li>
 						<li class="menu-has-children"><a href="#">Blog</a>
 							<ul>
-								<li><a href="#">Blog List</a></li>
+								<li><a href="blog-home.html">Blog List</a></li>
 								<li><a href="https://medium.com/@melchhepta">Medium</a></li>
 							</ul>
 						</li>
