--- a/blog-single.html
+++ b/blog-single.html
@@ -50,7 +50,7 @@
 						
 						<li class="menu-has-children"><a href="#">Blog</a>
 							<ul class="dark">
-								<li><a href="#">Blog List</a></li>
+								<li><a href="blog-home.html">Blog List</a></li>
 								<li><a href="https://medium.com/@melchhepta">Medium</a></li>
 							</ul>
 						</li>
