--- a/blog-home.html
+++ b/blog-home.html
@@ -65,7 +65,7 @@
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
-	<section class="banner-area relative" style="background-image: url('img/work/fly1.jpg'); background-attachment: fixed; background-size: contain ; background-repeat: repeat; ">
+	<section class="banner-area relative" style="background-image: url('img/work/Robot reading book.jpeg'); background-attachment: fixed; background-size: contain ; background-repeat: repeat; ">
 		<div class="container" >
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
@@ -106,11 +106,11 @@
 							<div class="feature-img">
 								<img class="img-fluid" src="img/work/1_GOj36I9RGBDKxzeU3wIHWw.png" alt="">
 							</div>
-							<a class="posts-title" href="blog-single.html"><h3>Word Embeddings: Beginner's In-depth Introduction</h3></a>
+							<a class="posts-title" href="https://medium.com/@melchhepta/word-embeddings-beginners-in-depth-introduction-d8aedd84ed35"><h3>Word Embeddings: Beginner's In-depth Introduction</h3></a>
 							<p class="excert">
 								What are word embeddings exactly?, Why Learn them? Loosely speaking, they are vector representations of a particular word. Having said this, what follows is how do we generate them? And More importantly, how is it done?
 							</p>
-							<a href="word-embedding.html" class="primary-btn" data-text="View More">
+							<a href="https://medium.com/@melchhepta/word-embeddings-beginners-in-depth-introduction-d8aedd84ed35" class="primary-btn" data-text="View More">
 								<span>V</span>
 								<span>i</span>
 								<span>e</span>
