--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
-	<section class="banner-area relative" style="background-image: url('img/work/EDYfIVyUwAAVRnu.jpeg'); background-attachment: fixed; background-size:cover; background-repeat: no-repeat ">
+	<section class="banner-area relative" style="background-image: url('img/work/1046x616_digital_eye.jpg'); background-attachment: fixed; background-size:cover; background-repeat: no-repeat ">
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
