project-research update

--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
 								</div>
 								<div class="middle">
 									<h4>Graph Convolutional Network</h4>
-									<div class="cat">Client Project</div>
+									<div class="cat">Research Project || 10/2019</div>
 								</div>
 								<a class="overlay" href="#"></a>
 							</div>
