--- a/research.html
+++ b/research.html
@@ -99,9 +99,10 @@
 				<p style="font-size: 18px">3. Multi-agent systems</p>
 
 				
-				<p style="font-size: 30px; margin-top: 40px; color: #e45447 !important">Research Intenship -Comenius University, Bratislava </p>
+				<!--<p style="font-size: 30px; margin-top: 40px; color: #e45447 !important">Research Intenship -Comenius University, Bratislava </p>
 			
 				<p style="font-size: 18px">4. RNN-CNN: Multimodal echo-state network attention  for Visual Questioning Answering</p>
+			-->
 			</div>
 <br /><br /><br /><br />
 			<div class="row d-flex justify-content-between align-items-end mb-80">
